goとvimの定義を追加

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,18 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Test binary, built with `go test -c`
+*.test
+
+go.mod
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# vim
+.*.swp
+*~
+
+
+
